--- a/locale/ja/LC_MESSAGES/meerk40t.po
+++ b/locale/ja/LC_MESSAGES/meerk40t.po
@@ -2096,15 +2096,19 @@ msgid "return paths around image"
 msgstr "画像周辺のパスを返す"
 
 #: meerk40t/extra/updater.py:21
+msgid  "A new {type} release is available:"
+msgstr ""
+
 msgid ""
-"A new {type} release is available:\n"
 "Version: {name} v{version} ({label})\n"
 "Url: {url}"
 msgstr ""
 
 #: meerk40t/extra/updater.py:26
+msgid "You seem to have the latest version."
+msgstr ""
+
 msgid ""
-"You seem to have the latest version.\n"
 "Latest version on github: {name} v{version} ({label})\n"
 "Url: {url}"
 msgstr ""
