--- a/locale/zh/LC_MESSAGES/meerk40t.po
+++ b/locale/zh/LC_MESSAGES/meerk40t.po
@@ -14148,7 +14148,7 @@ msgid "Smooth"
 msgstr "平滑"
 
 #: meerk40t/gui/toolwidgets/toolnodeedit.py:235
-msgid "Convert all lines into curves and smoothen"
+msgid "Convert all lines into smooth curves"
 msgstr "将所有直线转换为曲线并平滑"
 
 #: meerk40t/gui/toolwidgets/toolnodeedit.py:237
